--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: false
-
 language: php
 
 cache:
@@ -13,6 +11,7 @@ env:
     - LEGACY_DEPS="phpunit/phpunit"
 
 matrix:
+  fast_finish: true
   include:
     - php: 5.6
     - php: 7
