--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,9 @@
 docs_dir: doc/book
 site_dir: doc/html
-pages:
+nav:
     - index.md
     - Intro: intro.md
     - Usage: usage-examples.md
-site_name: zend-psr7bridge
-site_description: zend-psr7bridge
-repo_url: 'https://github.com/zendframework/zend-psr7bridge'
-copyright: 'Copyright (c) 2016 <a href="http://www.zend.com/">Zend Technologies USA Inc.</a>'
+site_name: laminas-psr7bridge
+site_description: laminas-psr7bridge
+repo_url: 'https://github.com/laminas/laminas-psr7bridge'
