Rewriting as Laminas Project package

--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,21 @@
 {
-    "name": "zendframework/zend-psr7bridge",
-    "description": "PSR-7 <-> Zend\\Http bridge",
-    "type": "library",
+    "name": "laminas/laminas-psr7bridge",
+    "description": "PSR-7 <-> Laminas\\Http bridge",
     "license": "BSD-3-Clause",
     "keywords": [
+        "laminas",
         "http",
         "psr",
-        "psr-7",
-        "zend",
-        "zendframework"
+        "psr-7"
     ],
-    "homepage": "https://github.com/zendframework/zend-psr7bridge",
+    "homepage": "https://laminas.dev",
     "support": {
-        "docs": "https://docs.zendframework.com/zend-psr7bridge",
-        "forum": "https://discourse.zendframework.com/c/questions/components",
-        "issues": "https://github.com/zendframework/zend-psr7bridge/issues",
-        "rss": "https://github.com/zendframework/zend-psr7bridge/releases.atom",
-        "slack": "https://zendframework-slack.herokuapp.com",
-        "source": "https://github.com/zendframework/zend-psr7bridge"
+        "docs": "https://docs.laminas.dev/laminas-psr7bridge/",
+        "issues": "https://github.com/laminas/laminas-psr7bridge/issues",
+        "source": "https://github.com/laminas/laminas-psr7bridge",
+        "rss": "https://github.com/laminas/laminas-psr7bridge/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
     "config": {
         "sort-packages": true
@@ -30,22 +28,23 @@
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "zendframework/zend-http": "^2.6",
-        "psr/http-message": "^1.0",
-        "zendframework/zend-diactoros": "^1.1"
+        "laminas/laminas-diactoros": "^1.1",
+        "laminas/laminas-http": "^2.6",
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.15 || ^6.0.8",
-        "zendframework/zend-coding-standard": "~1.0.0"
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "phpunit/phpunit": "^5.7.15 || ^6.0.8"
     },
     "autoload": {
         "psr-4": {
-            "Zend\\Psr7Bridge\\": "src/"
+            "Laminas\\Psr7Bridge\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "ZendTest\\Psr7Bridge\\": "test/"
+            "LaminasTest\\Psr7Bridge\\": "test/"
         }
     },
     "scripts": {
@@ -57,5 +56,8 @@
         "cs-fix": "phpcbf",
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+    },
+    "replace": {
+        "zendframework/zend-psr7bridge": "self.version"
     }
 }
