--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,11 @@ docs_dir: docs/book
 site_dir: docs/html
 nav:
     - index.md
-    - Intro: intro.md
-    - Usage: usage-examples.md
+    - { Intro: intro.md }
+    - { Usage: usage-examples.md }
 site_name: laminas-psr7bridge
 site_description: laminas-psr7bridge
 repo_url: 'https://github.com/laminas/laminas-psr7bridge'
+extra:
+    project: Mvc
+    project_url: 'https://docs.laminas.dev'
