--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~1.0.0",
-        "phpunit/phpunit": "^5.7.15 || ^6.5.6"
+        "phpunit/phpunit": "^5.7.15 || ^6.5.6 || ^7.5.20"
     },
     "conflict": {
         "laminas/laminas-stdlib": "< 3.2.1"
