--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,4 +1,6 @@
-<phpunit bootstrap="./vendor/autoload.php" colors="true">
+<phpunit bootstrap="./vendor/autoload.php"
+         backupGlobals="true"
+         colors="true">
     <testsuites>
         <testsuite name="Laminas\\Psr7Bridge Tests">
             <directory>./test</directory>
