Set version constraint for replaced repository in composer.json
Signed-off-by: Michał Bundyra <contact@webimpress.com>

--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,6 @@
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
     "replace": {
-        "zendframework/zend-psr7bridge": "self.version"
+        "zendframework/zend-psr7bridge": "^1.2.0"
     }
 }
