Make composer description prettier
Using escapings like &gt; in the composer description makes it look bad on packagist https://packagist.org/packages/laminas/laminas-psr7bridge#1.3.x-dev

Replaced "<->" with "to" to imporve display.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laminas/laminas-psr7bridge",
-    "description": "PSR-7 &lt;-&gt; laminas-http message conversions",
+    "description": "PSR-7 to laminas-http message conversions",
     "license": "BSD-3-Clause",
     "keywords": [
         "laminas",
