--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "extra": {
     },
     "require": {
-        "php": "^7.3 || ~8.0.0",
+        "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-diactoros": "^1.7 || ^2.0",
         "laminas/laminas-http": "^2.11",
         "laminas/laminas-zendframework-bridge": "^1.0",
