Migrate PHPUnit configuration which was validated against a deprecated schema
Signed-off-by: Andi Rückauer <arueckauer@gmail.com>

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,19 @@
-<phpunit bootstrap="./vendor/autoload.php"
-         backupGlobals="true"
-         colors="true">
-    <testsuites>
-        <testsuite name="Laminas\\Psr7Bridge Tests">
-            <directory>./test</directory>
-        </testsuite>
-    </testsuites>
+<?xml version="1.0" encoding="UTF-8"?>
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit//phpunit.xsd"
+        backupGlobals="true"
+        bootstrap="vendor/autoload.php"
+        colors="true">
+  <coverage processUncoveredFiles="true">
+    <include>
+      <directory suffix=".php">./src</directory>
+    </include>
+  </coverage>
 
-    <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">src</directory>
-        </whitelist>
-    </filter>
+  <testsuites>
+    <testsuite name="Laminas\\Psr7Bridge Tests">
+      <directory>./test</directory>
+    </testsuite>
+  </testsuites>
 </phpunit>
