Update PHPUnit configuration, enforce conversion of deprecation to exceptions
Signed-off-by: Andi Rückauer <arueckauer@gmail.com>

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,6 +4,7 @@
         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit//phpunit.xsd"
         backupGlobals="true"
         bootstrap="vendor/autoload.php"
+        convertDeprecationsToExceptions="true"
         colors="true">
   <coverage processUncoveredFiles="true">
     <include>
