--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,6 @@
         "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-diactoros": "^1.7 || ^2.0",
         "laminas/laminas-http": "^2.15",
-        "laminas/laminas-zendframework-bridge": "^1.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
@@ -36,7 +35,8 @@
         "vimeo/psalm": "^4.11"
     },
     "conflict": {
-        "laminas/laminas-stdlib": "< 3.2.1"
+        "laminas/laminas-stdlib": "< 3.2.1",
+        "zendframework/zend-psr7bridge": "*"
     },
     "autoload": {
         "psr-4": {
@@ -58,8 +58,5 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
         "static-analysis": "psalm --shepherd --stats"
-    },
-    "replace": {
-        "zendframework/zend-psr7bridge": "^1.2.0"
     }
 }
