--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "config": {
         "sort-packages": true,
         "platform": {
-            "php": "7.4.99"
+            "php": "8.0.99"
         },
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
@@ -29,16 +29,16 @@
     "extra": {
     },
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "laminas/laminas-diactoros": "^2.0",
         "laminas/laminas-http": "^2.15",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "laminas/laminas-coding-standard": "^2.4.0",
-        "phpunit/phpunit": "^9.5.10",
+        "laminas/laminas-coding-standard": "~2.4.0",
+        "phpunit/phpunit": "^9.5.25",
         "psalm/plugin-phpunit": "^0.17.0",
-        "vimeo/psalm": "^4.11"
+        "vimeo/psalm": "^4.28"
     },
     "conflict": {
         "laminas/laminas-stdlib": "< 3.2.1",
