--- a/composer.json
+++ b/composer.json
@@ -29,16 +29,16 @@
     "extra": {
     },
     "require": {
-        "php": "~8.1.0 || ~8.2.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
         "laminas/laminas-diactoros": "^2.25.2 || ^3.0.0",
-        "laminas/laminas-http": "^2.18.0",
+        "laminas/laminas-http": "^2.19.0",
         "psr/http-message": "^1.1 || ^2.0"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.5.0",
-        "phpunit/phpunit": "^9.5.27",
+        "phpunit/phpunit": "^10.4.2",
         "psalm/plugin-phpunit": "^0.18.4",
-        "vimeo/psalm": "^5.9.0"
+        "vimeo/psalm": "^5.15.0"
     },
     "autoload": {
         "psr-4": {
